178 to 183, added search link, input, and fake image

--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>hello</h1>
+    <h1 class="big-title margin-50">hello</h1>
+    <img src="drums.png" alt="">
+    <a href="https://www.google.com" target="_blank">SEARCH</a>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
 
+    <input type="text">
+
+    <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
+    <!-- JAVASCRIPT -->
     <script src="/index.js"></script>
   </body>
 </html>
